--- a/GoShopping/Shared/ToBuyTableViewCell.xib
+++ b/GoShopping/Shared/ToBuyTableViewCell.xib
@@ -50,32 +50,33 @@
                         <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="CYJ-30-DTV">
-                        <rect key="frame" x="346" y="3" width="6" height="6"/>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CYJ-30-DTV">
+                        <rect key="frame" x="362" y="0.0" width="4" height="60"/>
                         <color key="backgroundColor" systemColor="systemOrangeColor"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="6" id="6jZ-4S-DHp"/>
-                            <constraint firstAttribute="height" constant="6" id="C5F-Dl-SAr"/>
+                            <constraint firstAttribute="width" constant="4" id="6jZ-4S-DHp"/>
+                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="4" id="pPB-X8-AoX"/>
                         </constraints>
                     </view>
                 </subviews>
                 <color key="backgroundColor" name="BGColor"/>
                 <constraints>
-                    <constraint firstItem="CYJ-30-DTV" firstAttribute="trailing" secondItem="TNQ-vj-C8h" secondAttribute="trailing" id="1mo-L5-hus"/>
                     <constraint firstItem="t0Z-Vm-J5N" firstAttribute="leading" secondItem="djD-1l-sZS" secondAttribute="trailing" constant="8" id="2aR-8h-eyg"/>
                     <constraint firstAttribute="trailing" secondItem="TNQ-vj-C8h" secondAttribute="trailing" constant="12" id="Fde-o5-HKc"/>
                     <constraint firstItem="Vnu-MQ-b7h" firstAttribute="top" secondItem="t0Z-Vm-J5N" secondAttribute="bottom" constant="4" id="Gwl-s7-ea3"/>
-                    <constraint firstItem="CYJ-30-DTV" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="4" id="JwL-0A-BoT"/>
+                    <constraint firstItem="CYJ-30-DTV" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="JwL-0A-BoT"/>
                     <constraint firstAttribute="bottom" secondItem="HiV-Za-mwK" secondAttribute="bottom" constant="10.5" id="Q1q-WA-t3W"/>
                     <constraint firstItem="TNQ-vj-C8h" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="14" id="Ud8-G7-sKO"/>
                     <constraint firstItem="t0Z-Vm-J5N" firstAttribute="leading" secondItem="djD-1l-sZS" secondAttribute="trailing" constant="8" id="aeW-1c-xgK"/>
+                    <constraint firstItem="CYJ-30-DTV" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="bc5-yU-T2u"/>
                     <constraint firstAttribute="trailing" secondItem="t0Z-Vm-J5N" secondAttribute="trailing" constant="120" id="bg3-6g-Q9g"/>
                     <constraint firstItem="djD-1l-sZS" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="12" id="bzf-hd-10G"/>
                     <constraint firstAttribute="bottom" secondItem="Vnu-MQ-b7h" secondAttribute="bottom" constant="12" id="g56-CP-9CG"/>
                     <constraint firstAttribute="trailing" secondItem="HiV-Za-mwK" secondAttribute="trailing" constant="12" id="hSr-Zt-mBt"/>
                     <constraint firstItem="Vnu-MQ-b7h" firstAttribute="leading" secondItem="djD-1l-sZS" secondAttribute="trailing" constant="8" id="iff-iK-vj4"/>
-                    <constraint firstItem="TNQ-vj-C8h" firstAttribute="top" secondItem="CYJ-30-DTV" secondAttribute="bottom" constant="4" id="lVm-Rz-a85"/>
+                    <constraint firstAttribute="trailing" secondItem="CYJ-30-DTV" secondAttribute="trailing" id="sa0-lb-PaJ"/>
                     <constraint firstItem="djD-1l-sZS" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="12" id="tLG-5E-aOT"/>
+                    <constraint firstAttribute="bottom" secondItem="CYJ-30-DTV" secondAttribute="bottom" id="vJ8-SY-J6L"/>
                     <constraint firstItem="t0Z-Vm-J5N" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="12" id="ydm-MI-21u"/>
                 </constraints>
             </tableViewCellContentView>
