--- a/GoShoppingShare/Base.lproj/MainInterface.storyboard
+++ b/GoShoppingShare/Base.lproj/MainInterface.storyboard
@@ -51,7 +51,7 @@
                                                 </imageView>
                                                 <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" text="name" translatesAutoresizingMaskIntoConstraints="NO" id="6tk-Z3-1fA">
                                                     <rect key="frame" x="20" y="10" width="236" height="100"/>
-                                                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                    <color key="backgroundColor" name="BGColor"/>
                                                     <color key="textColor" name="FontColor"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
@@ -67,6 +67,7 @@
                                                 <constraint firstItem="vCc-Ne-2lZ" firstAttribute="leading" secondItem="6tk-Z3-1fA" secondAttribute="trailing" constant="8" symbolic="YES" id="yq6-ED-ON4"/>
                                             </constraints>
                                         </tableViewCellContentView>
+                                        <color key="backgroundColor" name="BGColor"/>
                                     </tableViewCell>
                                 </cells>
                             </tableViewSection>
@@ -104,6 +105,7 @@
                                                 <constraint firstItem="4be-au-uWs" firstAttribute="centerY" secondItem="01f-7V-6mv" secondAttribute="centerY" id="ckh-OQ-2C3"/>
                                             </constraints>
                                         </tableViewCellContentView>
+                                        <color key="backgroundColor" name="BGColor"/>
                                     </tableViewCell>
                                 </cells>
                             </tableViewSection>
@@ -133,6 +135,10 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="akm-bq-Lwe">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" name="CardColor"/>
+                        <textAttributes key="largeTitleTextAttributes">
+                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        </textAttributes>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
@@ -145,8 +151,14 @@
         </scene>
     </scenes>
     <resources>
+        <namedColor name="BGColor">
+            <color red="0.95300000905990601" green="0.96100002527236938" blue="0.9649999737739563" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <namedColor name="BrandColor">
             <color red="0.24300000071525574" green="0.83899998664855957" blue="0.65100002288818359" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="CardColor">
+            <color red="0.89399999380111694" green="0.96899998188018799" blue="0.9649999737739563" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="FontColor">
             <color red="0.22699999809265137" green="0.22699999809265137" blue="0.22699999809265137" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
