small ui tunnings

--- a/GoShoppingShare/Base.lproj/MainInterface.storyboard
+++ b/GoShoppingShare/Base.lproj/MainInterface.storyboard
@@ -131,9 +131,15 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="akm-bq-Lwe">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="tintColor" name="BrandColor"/>
                         <color key="barTintColor" name="CardColor"/>
+                        <textAttributes key="titleTextAttributes">
+                            <fontDescription key="fontDescription" name="GillSans-SemiBold" family="Gill Sans" pointSize="17"/>
+                            <color key="textColor" name="FontColor"/>
+                        </textAttributes>
                         <textAttributes key="largeTitleTextAttributes">
-                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <fontDescription key="fontDescription" name="GillSans-SemiBold" family="Gill Sans" pointSize="17"/>
+                            <color key="textColor" name="FontColor"/>
                         </textAttributes>
                     </navigationBar>
                     <nil name="viewControllers"/>
