--- a/GoShopping/Shared/ToBuyTableViewCell.xib
+++ b/GoShopping/Shared/ToBuyTableViewCell.xib
@@ -6,7 +6,6 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17125"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -52,7 +51,7 @@
                     </label>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CYJ-30-DTV">
                         <rect key="frame" x="362" y="0.0" width="4" height="60"/>
-                        <color key="backgroundColor" systemColor="systemOrangeColor"/>
+                        <color key="backgroundColor" name="HeroScreenColor"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="4" id="6jZ-4S-DHp"/>
                             <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="4" id="pPB-X8-AoX"/>
@@ -102,8 +101,8 @@
         <namedColor name="FontColor">
             <color red="0.22699999809265137" green="0.22699999809265137" blue="0.22699999809265137" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
-        <systemColor name="systemOrangeColor">
-            <color red="1" green="0.58431372549019611" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
+        <namedColor name="HeroScreenColor">
+            <color red="0.83899998664855957" green="0.035000000149011612" blue="0.43500000238418579" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
     </resources>
 </document>
